--- a/ITESRCLibrosMAUI/Views/ListaView.xaml
+++ b/ITESRCLibrosMAUI/Views/ListaView.xaml
@@ -4,12 +4,12 @@
              x:Class="ITESRCLibrosMAUI.Views.ListaView"
              Title="Lista de Libros">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Nuevo"></ToolbarItem>
+        <ToolbarItem Text="Nuevo" Command="{Binding NuevoCommand}"></ToolbarItem>
     </ContentPage.ToolbarItems>
-    <ListView>
+    <ListView ItemsSource="{Binding Libros}">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <ImageCell></ImageCell>
+                <ImageCell Text="{Binding Titulo}" Detail="{Binding Autor}" ImageSource="{Binding Portada}"></ImageCell>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
