--- a/ITESRCLibrosMAUI/Views/ListaView.xaml
+++ b/ITESRCLibrosMAUI/Views/ListaView.xaml
@@ -6,10 +6,17 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Nuevo" Command="{Binding NuevoCommand}"></ToolbarItem>
     </ContentPage.ToolbarItems>
-    <ListView ItemsSource="{Binding Libros}">
+    <ListView ItemsSource="{Binding Libros}" HasUnevenRows="True"  SeparatorVisibility="Default">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <ImageCell Text="{Binding Titulo}" Detail="{Binding Autor}" ImageSource="{Binding Portada}"></ImageCell>
+                <ViewCell>
+                    <Grid RowDefinitions="auto, auto" ColumnDefinitions="50, *">
+                        <Label TextColor="Black" Text="{Binding Titulo}" Grid.Column="1"></Label>
+                        <Label TextColor="Gray" Text="{Binding Autor}" Grid.Column="1" Grid.Row="1"></Label>
+                        <Image MaximumHeightRequest="100" Margin="5" Aspect="AspectFit" Source="{Binding Portada}" Grid.RowSpan="2"></Image>
+                        <Border StrokeThickness="1" Stroke="#EEE" Grid.ColumnSpan="2" Grid.Row="1" VerticalOptions="End"></Border>
+                        </Grid>
+                </ViewCell>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
